# Modular_Multi-sensor_Fusion

./: .gitignore  CMakeLists.txt  README.md
app/: data_test.cpp
cmake/: global_defination.cmake
config/: config.yaml  euroc.yaml  simdata_config.yaml
data/: gnss.txt  img.txt
data/sim_data/: gnss.txt
docker/: Dockerfile  Dockerfile copy  build.sh  run_docker.sh  run_docker_nvidia.sh
src/: FusionSystem.cpp  FusionSystem.h
src/common/: Converter.h  CooTrans.h  DataManager.h  GlobalDefination.h.in  InitialAlignment.cpp  InitialAlignment.h  InitialSFM.cpp  Initializers.h  Parameter.h  Solve5pts.cpp  StateManager.h
src/initializers/: InitialAlignment.cpp  InitialAlignment.h  InitialSFM.cpp  InitialSFM.h  Initializers.h  Solve5pts.cpp  Solve5pts.h
src/marginalization/: marginalization_factor.h  marginalization_info.h  residual_block_info.h
src/observer/: CameraObserver.cpp  CameraObserver.h  GNSSObserver.cpp  GNSSObserver.h  GNSSWheelObserver.cpp  GNSSWheelObserver.h  GPSObserver.cpp  GPSObserver.h  GPSWheelObserver.cpp  GPSWheelObserver.h  Observer.h  WheelObserver.cpp  WheelObserver.h
src/optimize_fusion/: ceres_core.hpp  ceres_fusion.hpp  gtsam_fusion.hpp  optimize_fusion.h
src/optimize_fusion/ceres_core/: gnss_6dofpose_factor.cpp  gnss_6dofpose_factor.h  imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_factor.cpp  pose_factor.h  pose_local_parameterization.h  utility.cpp  utility.h
src/predictor/: CeresPredictor.cpp  CeresPredictor.h  IMUPredictor.cpp  IMUPredictor.h  Predictor.h  WheelIMUPredictor.cpp  WheelIMUPredictor.h  WheelPredictor.cpp  WheelPredictor.h
src/preint/: IMUPreintegration.h  Preintegration.h  WheelIMUPreintegration.h  WheelPreintegration.h
src/preint/imu/: imu_types.h  preintegration.h
src/preint/utils/: eigen_utils.hpp  sophus_utils.hpp
src/preint_gtsam/: preint_gtsam_interface.h
src/updater/: Filter.cpp  Filter.h  Optimizer.cpp  Optimizer.h  Updater.h
src/viewer/: Viewer.cpp  Viewer.h
src/visual/: Feature.hpp  ImageProcessor.cpp  ImageProcessor.h  MsckfFeature.hpp  VinsFeatureManager.cpp  VinsFeatureManager.h
tool/: DataLoader.cpp  DataLoader.h
